# grimoire-legacy

./: .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.1404  Dockerfile.1804  FAQ.md  Info.plist  LICENSE-MIT  README.md  SPEC.md  build.rs  grimoire-new  new.sh  spec.md
examples/assets/cubemap/: orbital-element_bk.tga
examples/gaussian-blur/: final.glsl  frag0.glsl  gaussian-horizontal.glsl  gaussian-vertical.glsl  grim.toml
examples/scene-0001/: common.glsl  grim.toml  ground.frag.glsl  ground.vert.glsl  pass.frag.glsl  post.frag.glsl  quad.vert.glsl  skybox.frag.glsl  ui.vert.glsl
examples/shadertoy-debug/: grim.toml  image.glsl
examples/shadertoy-deformation-feedback/: buffer-a.glsl  grim.toml  image.glsl
examples/shadertoy-fps/: frag.glsl  grim.toml
examples/shadertoy-keyboard/: grim.toml  image.glsl
examples/shadertoy-keyboard-debug/: grim.toml  image.glsl
examples/shadertoy-microphone/: frag.glsl  grim.toml  image.glsl
examples/shadertoy-mouse/: grim.toml  image.glsl
examples/shadertoy-new/: frag.glsl  grim.toml  image.glsl
examples/shadertoy-sound/: frag.glsl  grim.toml
examples/shadertoy-time/: frag.glsl  grim.toml
examples/shadertoy-tuner/: grim.toml  image.glsl
examples/share/: fullscreen_triangle.glsl
examples/share/cubemap/: orbital-element_dn.tga  orbital-element_ft.tga  orbital-element_lf.tga  orbital-element_rt.tga  orbital-element_up.tga
examples/video/: grim.toml
examples/webcam/: grim.toml  image.glsl
grimoire/: Cargo.toml
grimoire/shaders/: shadertoy_uniforms.glsl
grimoire/src/: config.rs  effect.rs  effect_player.rs  error.rs  main.rs  mouse.rs  stream.rs  video.rs
msvc/lib/64/: SDL2.lib  SDL2main.lib  SDL2test.lib  glib-2.0.lib  gobject-2.0.lib  gstapp-1.0.lib  gstaudio-1.0.lib  gstbase-1.0.lib  gstreamer-1.0.lib  gstvideo-1.0.lib
src/: audio.rs  config.rs  effect.rs  effect_player.rs  error.rs  file_stream.rs  footer.glsl  gl.rs  grimoire.rs  header.glsl  keyboard.rs  main.rs  platform.rs  resource.rs  shadertoy_uniforms.glsl  sound.rs  stream.rs  video.rs
