[package]
name = "grimoire"
version = "0.1.0"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jshrake/grimoire"
keywords = ["grimoire", "shadertoy", "glsl", "opengl"]
readme = "README.md"
include = ["src/*.rs","src/*.glsl","Cargo.toml","README.md","SPEC.md","FAQ.md","LICENSE-APACHE","LICENSE-MIT"]

[badges]
travis-ci = { repository = "jshrake/grimoire" }

[dependencies]
byte-slice-cast     = "0.1.0"
chrono              = "0.4"
clap                = "2.31.2"
env_logger          = "0.5.10"
failure             = "0.1.1"
gleam               = "0.4.28"
gstreamer           = "0.11.1"
gstreamer-app       = "0.11.0"
gstreamer-audio     = "0.11.0"
gstreamer-video     = "0.11.0"
image               = "0.19.0"
lazy_static         = "1.0"
log                 = "0.4.0"
notify              = "4.0.0"
regex               = "0.2"
sdl2                = "0.31.0"
serde               = "1.0"
serde_derive        = "1.0"
toml                = "0.4"
