[package]
name = "grimoire"
description = "a native shadertoy + vertexshaderart clone"
version = "0.1.0"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jshrake/grimoire"
keywords = ["shadertoy", "glsl", "shaders", "creative", "graphics"]
readme = "README.md"
include = ["src/*.rs","src/*.glsl","Cargo.toml","README.md","SPEC.md","FAQ.md","LICENSE-APACHE","LICENSE-MIT"]
edition = "2018"

[badges]
travis-ci = { repository = "jshrake/grimoire" }

[dependencies]
byte-slice-cast     = "0.2"
chrono              = "0.4"
clap                = "2.32"
env_logger          = "0.6"
failure             = "0.1"
gleam               = "0.6"
glsl-include        = "0.3"
gstreamer           = "0.13"
gstreamer-app       = "0.13"
gstreamer-audio     = "0.13"
gstreamer-video     = "0.13"
image               = "0.21"
lazy_static         = "1.3"
log                 = "0.4"
notify              = "4.0.9"
regex               = "1"
sdl2                = "0.32"
serde               = "1.0"
serde_derive        = "1.0"
toml                = "0.4"
walkdir             = "2"

